# cosai-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SLSA.md  pyproject.toml  scan-mnemo.sh  scan-vitalsync.sh
.claude/: settings.json
.github/workflows/: ci.yml  cosai-gate.yml
catalog/official/: T01-001.json  T01-001.json.sig  T01-002.json  T01-002.json.sig  T01-003.json  T01-003.json.sig  T01-004.json  T01-004.json.sig  T01-005.json  T01-005.json.sig  T01-006.json  T01-006.json.sig  T02-001.json  T02-001.json.sig  T02-003.json  T02-003.json.sig  T02-004.json  T02-004.json.sig  T02-005.json  T02-005.json.sig  T03-001.json  T03-001.json.sig  T03-002.json  T03-002.json.sig  T03-003.json  T03-003.json.sig  T03-004.json  T03-004.json.sig  T03-005.json  (+54 more)
cosai_mcp/: __init__.py  api.py  baseline.py  cli.py  config.py  discovery.py  exceptions.py  keys.py  pytest_plugin.py  session.py  signing.py  synthesis.py
docs/: ANALYSIS_AND_RATIONALE.md  ARCHITECTURE.md  AUDIT_2026-06-12_RESOLUTION.md  CATALOG_SIGNING_FAQ.md  CONTRIBUTING.md  COVERAGE.md  GETTING_STARTED.md  HARNESS_SECURITY_FAQ.md  IETF_AGENT_AUTH_CRUCIBLE.md  IETF_AGENT_AUTH_EXTENSION.md  P10-P12-CONTEXT.md  PLATFORM_GUIDE.md  POSITION.md  PRODUCT_REVIEW_2026-06-16.md  RELEASE_HANDOFF.md  SECURITY.md  SERVER_SDK_DESIGN.md  SUBMISSION_AND_PUBLIC.md  THREAT_CATALOG.md  THREAT_MAPPING.md  VALUE_PROP.md  VISION.md  architecture-decisions.md  coverage-matrix.md  workplan.md
examples/: README.md
scripts/: sign_catalog.py
tests/: conftest.py  test_cli_scan_surface.py  test_coverage_matrix_honesty.py  test_examples_smoke.py  test_exit_code_scan_incomplete.py  test_org_signing_key.py  test_probe_runner_isolation.py
(+128 files in other folders)
