[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosai-mcp"
version = "0.1.0"
description = "Open-source MCP security framework covering all 12 CoSAI threat categories"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "cosai-mcp contributors" }]
keywords = ["mcp", "security", "cosai", "llm", "ai-safety"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "google-re2>=1.1",
    "joserfc>=0.12",
    "keyring>=25.0",
    "jsonschema>=4.22",
    "cryptography>=42.0",
    "click>=8.1",
]

[project.optional-dependencies]
pytest = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-jsonschema>=4.22",
]

[project.scripts]
cosai = "cosai_mcp.cli:main"

[project.entry-points."pytest11"]
cosai = "cosai_mcp.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["cosai_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B", "C4"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
